﻿*******************************************************************

   Проект : WebPrinter OPOS драйвер

*******************************************************************

  OposShtrih_1.13.62.exe
  08 декабря 2025 10:05
  
  [+] Добавлен параметр uuid для чека. Установка параметра через 
      метод DIO_SET_DRIVER_PARAMETER, чтение через DIO_GET_DRIVER_PARAMETER.
	  Номер параметра DriverParameterUuid       = 303;
      DIO_GET_DRIVER_PARAMETER  = 29; // read internal driver parameter
      DIO_SET_DRIVER_PARAMETER  = 30; // write internal driver parameter

*******************************************************************

  OposShtrih_1.13.61.exe
  14 января 2024 14:28
  
  [+] Добавлена страница SetPosID для вызова метода SetPosID
  
*******************************************************************

  OposShtrih_1.13.60.exe
  13 декабря 2024 18:38
  
  [-] Поля card_type и ppt_id не будут сохраняться при оплате наличными
  
*******************************************************************

  OposShtrih_1.13.59.exe
  29 октября 2024 14:38
  
  [-] Исключена коррекция времени сервера
	  
*******************************************************************

  OposShtrih_1.13.58.exe
  21 октября 2024 14:52
  
  [+] Добавлена обработка ошибки 2, "Read timed out" при закрытии смены 
      При этой ошибке непонятно, закрыта смена на сервере или нет
  
*******************************************************************

  OposShtrih_1.13.57.exe
  30 сентября 2024 12:45
  
  [+] Добавлена проверка кода маркировки
  
*******************************************************************

  OposShtrih_1.13.56.exe
  25 сентября 2024 18:40
  
  [+] Добавлена проверка, зарегистрирован ли чек на сервере
      Это нужно в тех случаях, когда сервер возвращает ошибку, 
	  но на самом деле чек зарегистрирован
	  
*******************************************************************

  OposShtrih_1.13.55.exe
  20 сентября 2024 14:20
  