@@ -7,7 +7,7 @@ uses
   DeviceService;
 
 const
-  GenericServiceVersion = deviceVersion113 + 62;
+  GenericServiceVersion = deviceVersion113 + 63;
 
 implementation
 
