@@ -1,6 +1,6 @@
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 1,13,0,62
-PRODUCTVERSION 1,13,0,62 
+FILEVERSION 1,13,0,63
+PRODUCTVERSION 1,13,0,63 
 FILEFLAGSMASK 0x3fL
 FILEFLAGS 0x0L
 FILEOS 0x4L
@@ -13,7 +13,7 @@ BEGIN
     BEGIN
       VALUE "CompanyName", "SHTRIH-M\0"
       VALUE "FileDescription", "WebPrinter OPOS fiscal printer service\0"
-      VALUE "FileVersion", "1.13.0.62\0"
+      VALUE "FileVersion", "1.13.0.63\0"
       VALUE "InternalName", "WebPrinter OPOS fiscal printer driver\0"
       VALUE "LegalCopyright", "SHTRIH-M \251 2024 \0"
       VALUE "OriginalFilename", "WebFptrSo.dll\0"
