@@ -4,6 +4,13 @@
 
 *******************************************************************
 
+  OposShtrih_1.13.63.exe
+  12 февраля 2026 15:55
+  
+  [-] Исключена обработка кода товара перед добавлением в список Labels
+  
+*******************************************************************
+
   OposShtrih_1.13.62.exe
   08 декабря 2025 10:05
   
